style.css
* {
  -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
          box-sizing: border-box;
}

*:focus {
  outline: none;
}
html,
body {
  min-width: 100vw;
  min-height: 100vh;
  margin: 0;
  padding: 0;
}

body {
  background-color: #222222;
  line-height: 1.5em;
}

iframe {
  border: none;
}

#device {
  position: fixed;
  min-width: 100vw;
  min-height: 100vh;
  margin: 0;
  padding: 0;
  background-color: #111111;
  transition: 1.25s;
}

#container {
  display: grid; 
  position: absolute;
  top: 50%;
  left: 50%;
  margin: -47.5vh 0 0 -50vh;
  width: 100vh;
  height: 95vh;
  text-align: center;
  grid-template-columns: repeat(3, 1fr);
  transition: 1s;
}

#homescreen {
  display: inherit;
  width: inherit;
  height: inherit;
  grid-template-rows: repeat(4, 1fr);
}

#logo {
  margin: 20vh auto 0 auto;
  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
  font-size: 14vh;
  font-weight: bolder;
  text-align: center;
  color: blanchedalmond;
  opacity: 0;
  cursor: default;
  z-index: 666;
  transition: 3.5s;
}

#author {
  margin: 55vh auto 0 auto;
  font-family: Arial, Helvetica, sans-serif;
  font-size: 4vh;
  text-align: center;
  color: burlywood;
  opacity: 0;
  cursor: default;
  z-index: 420;
  transition: 5.5s;
}

#one-player,
#two-player,
#login,
#reset,
#logout {
  position: fixed;
  height: 18vh;
  width: inherit;
  border: 4px dotted burlywood;
  border-radius: 5vh 5vh 10vh 10vh;
  font-family: 'Courier New', Courier, monospace;
  font-size: 8vh;
  opacity: 0.7;
  cursor: pointer;
}

#one-player,
#two-player {
  visibility: hidden;
}

#one-player {
  margin: 35vh auto 0 auto;
  border-bottom: none;
  z-index: 1;
}

#two-player {
  margin: 51vh auto 0 auto;
  border-top: none;
  z-index: 0;
}

#login {
  margin: 70vh auto 0 auto;
  background: none;
  color: burlywood;
}

#reset {
  margin: 54vh auto 0 auto;
  border-bottom: none;
  z-index: 3;
}

#logout {
  margin: 70vh auto 0 auto;
  border-top: none;
  z-index: 2;
}

#login-one,
#login-two,
#you {
  position: fixed;
  height: 24vh;
  width: 100vh;
  padding: 0 5vh;
  background: none;
  border: none;
  border-bottom: 3px dotted burlywood;
  border-radius: 8.5vh 8.5vh 15vh 15vh;
  font-size: 10vh;
  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
  text-align: center;
  color: blanchedalmond;
  transition: 250ms;
}

#login-one:focus,
#login-two:focus,
#you:focus {
  padding: 0;
  padding-left: 10vh;
  border-bottom: 4px dotted #111111;
  border-radius: 15vh 8vh;
  text-align: left;
  background-color: blanchedalmond;
  color: #222222;
}

#login-one { margin: 5vh auto 0 auto; }

#login-two { margin: 35vh auto 0 auto; }

#greeting {
  position: fixed;
  top: 20%;
  left: 50%;
  width: 100vh;
  height: 35vh;
  margin: -17.5vh 0 0 -50vh;
  padding: 12vh 4vh 12vh 4vh;
  font-family: 'Courier New', Courier, monospace;
  font-size: 6vh;
  font-weight: bolder;
  line-height: 6vh;
  border-radius: 0 0 15vh 15vh;
  background-color: #111111;
  border: 8px dashed #222222;
  border-top: none;
  border-bottom: none;
  text-align: center;
  opacity: 0.4;
  transition: 2s;
}

#you { margin: 40vh auto 0 auto }

#message {
  position: fixed;
  margin: 32.5vh auto 0 auto;
  width: inherit;
  height: inherit;
  background: none;
  color: #222222;
  font-size: 7vh;
  font-weight: bolder;
  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
  cursor: default;
  transition: 1.5s;
}

#end {
  position: fixed;
  display: grid;
  margin: 0 auto;
  width: inherit;
  height: inherit;
  font-family: 'Courier New', Courier, monospace;
  font-weight: bolder;
  text-align: center;
  transition: 1.5s;
}

[id^='cell-'] {
  background: none;
  background-color: #222222;
  color: inherit;
  border: 2px dotted burlywood;
  padding: 0;
  font: inherit;
  cursor: pointer;
  outline: inherit;
  width: 33vh;
  height: 31.5vh;
  margin: 0 auto;
  font-size: 24.25vh;
  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
  color: blanchedalmond;
  font-weight: bolder;
  opacity: 0.6;
}

#cell-0x0 {
  border-left: none;
  border-top: none;
}

#cell-0x1 { border-top: none; }

#cell-0x2 {
  border-right: none;
  border-top: none;
}

#cell-1x0 { border-left: none; }

/* cell-1x1 predefined */

#cell-1x2 { border-right: none; }

#cell-2x0 {
  border-bottom: none;
  border-left: none;
}

#cell-2x1 { border-bottom: none; }

#cell-2x2 {
  border-bottom: none;
  border-right: none;
}

#thaddeus, #robot {
  width: 100%;
  height: 100%;
  opacity: 0;
  transition: 10s;
}

#meow,
#computer {
  transition: 15s;
}

#anim-body {
  background: radial-gradient(#111111,
                              #111111,
                              #222222,
                              #222222)
                              no-repeat
                              fixed
                              center;
}

#horizon {
  position: fixed;
  top: 55.5vh;
  width: 100%;
  height: 700px;
  background-color: #222222;
}

#meow pre,
#computer pre {
  position: fixed;
  left: 50%;
  height: 72vh;
  font-family: 'Courier New', Courier, monospace;
}

#meow pre {
  top: 42%;
  width: 74vh;
  margin: -36vh 0 0 -32vh;
  font-size: 2.5vh;
  line-height: 2.9vh;
}

#computer pre {
  top: 40%;
  width: 86vh;
  margin: -36vh 0 0 -43vh;
  font-size: 2.2vh;
  line-height: 3.2vh;
}

#meow pre:not(.active),
#computer pre:not(.active) {
  visibility: hidden;
}

.btn-group-active {
  background-color: burlywood;
  color: #222222;
}

.btn-group-inactive {
  background: none;
  color: burlywood;
}

.blink {
  background-color: burlywood;
  border-color: #222222;
  color: #222222;
  opacity: 1;
  transition: 0.5s;
}

.glow,
.mark {
  background-color: blanchedalmond;
  color: burlywood;
}

.glow {
  text-shadow: 1px 1px 1px #222222;
  opacity: 0.7;
  transition: 1s;
}

.mark {
  transition: 250ms;
}

.dim {
  background: none;
  color: #111111;
  opacity: 0.5;
}

.blackout {
  background-color: #111111;
  transition: 1s;
}

.active {
  visibility: visible;
}

@media(hover: hover) and (pointer: fine) {

  #login:hover,
  #login:focus {
    border-color: blanchedalmond;
    opacity: 1;
  }

  #login:active { 
    border-color: burlywood;
    color: blanchedalmond;
    opacity: 0.7;
  }

  #login-one:hover,
  #login-two:hover,
  #you:hover {
    color: blanchedalmond;
    cursor: text;
    opacity: 0.2;
  }

  #login-one:focus,
  #login-two:focus,
  #you:focus {
    color: #111111;
    opacity: 0.7;
  }

  .hover {
    border-color: blanchedalmond;
    opacity: 1;
  }

  .blink {
    background-color: burlywood;
    border-color: #222222;
    color: #222222;
    opacity: 1;
    transition: 0.5s;
  }
  
  .glow {
    background-color: blanchedalmond;
    color: burlywood;
    text-shadow: 1px 1px 1px #222222;
    opacity: 0.7;
    transition: 1s;
  }
  
  .dim {
    background: none;
    color: #111111;
    opacity: 0.5;
  }
  
  .blackout {
    background-color: #111111;
    transition: 1s;
  }
}

@media(any-pointer: coarse) {
  #one-player {
    background-color: burlywood;
    color: #222222;
  }
  #two-player {
    background: none;
    color: burlywood;
  }
  #reset {
    background-color: burlywood;
    color: #222222;
  }
  #logout {
    background: none;
    color: burlywood;
  }
}

@media screen and (orientation: portrait) {

  #container {
    margin: -50vw 0 0 -47.5vw;
    width: 95vw;
    height: 100vw;
  }

  #logo {
    margin: 20vw auto 0 auto;
    font-size: 10vw;
  }

  #author {
    margin: 55vw auto 0 auto;
    font-size: 4vw;
  }

  #one-player,
  #two-player,
  #login,
  #reset,
  #logout {
    height: 18vw;
    border-radius: 5vw 5vw 10vw 10vw;
    font-size: 8vw;
  }

  #one-player {
    margin: 35vw auto 0 auto;
  }
  
  #two-player {
    margin: 51vw auto 0 auto;
  }
  
  #login {
    margin: 70vw auto 0 auto;
  }
  
  #reset {
    margin: 54vw auto 0 auto;
  }
  
  #logout {
    margin: 70vw auto 0 auto;
  }
  
  #login-one,
  #login-two,
  #you {
    height: 24vw;
    width: 95vw;
    border-radius: 8.5vw 8.5vw 15vw 15vw;
    font-size: 10vw;
  }
  
  #login-one:focus,
  #login-two:focus,
  #you:focus {
    padding-left: 10vw;
    border-radius: 15vw 8vw;
  }
  
  #login-one { margin: 5vw auto 0 auto; }
  
  #login-two { margin: 35vw auto 0 auto; }
  
  #you { margin: 40vw auto 0 auto }
  
  #greeting {
    width: 100vw;
    height: 35vw;
    margin: -17.5vw 0 0 -50vw;
    padding: 12vw 4vw 12vw 4vw;
    font-size: 6vw;
    line-height: 6vw;
    border-radius: 0 0 15vw 15vw;
  }

  #message {
    margin: 32.5vw auto 0 auto;
    font-size: 7vw;
  }
  
  [id^='cell-'] {
    width: 31.5vw;
    height: 33vw;
    margin: 0 auto;
    font-size: 24.25vw;
  }

  #horizon {
    top: 53vh;
    width: 100%;
  }

  #anim-body {
    height: 72vw;
  }

  #meow pre {
    width: 74vw;
    margin: -36vw 0 0 -32vw;
    font-size: 2.5vw;
    line-height: 2.9vw;
  }

  #computer pre {
    width: 86vw;
    margin: -36vw 0 0 -43vw;
    font-size: 2.2vw;
    line-height: 3.2vw;
  }
}

